@@ -1,4 +1,7 @@
 
+leachbj - Thu October 7 2004
+	merged play/pause and timer patch from Prashant
+
 leachbj - Fri October 1 2004
 	merged wav record/playback patch from Prashant
 
